--- a/src/app/components/add-educacion/add-educacion.component.html
+++ b/src/app/components/add-educacion/add-educacion.component.html
@@ -86,14 +86,6 @@
 <div class="modal-footer">
 </div>-->
 
-
-
-
-
-
-
-
-
 <!--
 <button
 [ngClass]="{
@@ -172,19 +164,34 @@ class="btn btn-primary"
   </button>
 </form>-->
 
-
 <ng-template #content let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
-    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    ></button>
   </div>
   <div class="modal-body">
-    <form [formGroup]="form"  (ngSubmit)="onSubmit($event)" >
+    <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
       <div class="mb-3">
         <label for="dateOfBirth">Date of birth</label>
         <div class="input-group">
-          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-          <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+          <input
+            id="dateOfBirth"
+            class="form-control"
+            placeholder="yyyy-mm-dd"
+            name="dp"
+            ngbDatepicker
+            #dp="ngbDatepicker"
+          />
+          <button
+            class="btn btn-outline-secondary calendar"
+            (click)="dp.toggle()"
+            type="button"
+          ></button>
         </div>
       </div>
       <div class="mb-3">
@@ -197,7 +204,7 @@ class="btn btn-primary"
           formControlName="nombre"
         />
       </div>
-    
+
       <div class="mb-3">
         <label class="form-label" for="einstitucion">Institucion:</label>
         <input
@@ -209,59 +216,65 @@ class="btn btn-primary"
         />
       </div>
 
-    
-    <div class="mb-3">
-      <label class="form-label" for="enivel">Nivel:</label>
-      <input
-        class="form-control"
-        type="text"
-        formControlName="nivel"
-        id="enivel"
-        placeholder="Nivel de estudio "
-      />
-    </div>
-    <div class="mb-3">
-      <label class="form-label" for="efechaini">Fecha de Inicio:</label>
-      <input
-        class="form-control"
-        type="date"
-        formControlName="fechaini"
-        id="efechaini"
-      />
-    </div>
-  
-    <div class="mb-3">
-      <label class="form-label" for="efechafin">Fecha de finalizacion: </label>
-      <input
-        class="form-control"
-        type="date"
-        formControlName="fechafin"
-        id="efechafin"
-      />
-    </div>
-    <button type="submit" class="btn btn-primary" [disabled]="form.invalid" (click)="modal.close()">
-      Agregar Educacion
-    </button>
+      <div class="mb-3">
+        <label class="form-label" for="enivel">Nivel:</label>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="nivel"
+          id="enivel"
+          placeholder="Nivel de estudio "
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="efechaini">Fecha de Inicio:</label>
+        <input
+          class="form-control"
+          type="date"
+          formControlName="fechaini"
+          id="efechaini"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="efechafin"
+          >Fecha de finalizacion:
+        </label>
+        <input
+          class="form-control"
+          type="date"
+          formControlName="fechafin"
+          id="efechafin"
+        />
+      </div>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="form.invalid"
+        (click)="modal.close()"
+      >
+        Agregar Educacion
+      </button>
     </form>
   </div>
   <div class="modal-footer">
-  
     <!--<button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>-->
   </div>
 </ng-template>
 <button
-[ngClass]="{
-  btn: true,
-  'btn-right': true
-}"
-class="btn btn-primary"
-(click)="toogleForm()"
-(click)="open(content)"	
+  [ngClass]="{
+    btn: true,
+    'btn-right': true
+  }"
+  class="btn btn-primary"
+  (click)="toogleForm()"
+  (click)="open(content)"
 >
-Agregar Educacion MODAL
+  <i class="fa fa-plus"></i>
 </button>
- <!--<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>-->
+<!--<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>-->
 
-<hr>
+
+<hr />
 
 <pre>{{ closeResult }}</pre>
