--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -1,4 +1,5 @@
 <p>add-project works!</p>
+<!--
 <button
   [ngClass]="{
     btn: true,
@@ -66,6 +67,98 @@
   </div>
 
   <button type="submit" class="btn btn-primary" [disabled]="form.invalid">
-    Agregar Proyecto
+    
   </button>
 </form>
+fINNNNNN DE TODO ESTO VAMOS AL MODAL-->
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    ></button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
+      <div class="mb-3">
+        <label class="form-label" for="enombre">Nombre deL proyecto:</label>
+        <input
+          class="form-control"
+          type="text"
+          id="enombre"
+          placeholder="Nombre "
+          formControlName="nombre"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="edescripcion"
+          >Descripcion del proyecto</label
+        >
+        <input
+          class="form-control"
+          type="text"
+          id="edescripcion"
+          placeholder="descripcion_proyecto"
+          formControlName="descripcion"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="eurl">Url del proyecto: </label>
+        <input
+          class="form-control"
+          type="text"
+          id="eurl"
+          placeholder="url del proyecto"
+          formControlName="url"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="etipo_tecnologia"
+          >Tipo de tecnologias utilizadas:
+        </label>
+        <input
+          class="form-control"
+          type="text"
+          id="etipo_tecnologia"
+          placeholder="tipo_tecnologia utilizadas"
+          formControlName="tipotec"
+        />
+      </div>
+
+      <button
+        type="submit"
+        class="btn btn-primary"
+        
+        (click)="modal.close()"
+      >
+        Agregar Proyecto
+      </button>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <!--
+      [disabled]="form.invalid"
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>-->
+  </div>
+</ng-template>
+<button
+  [ngClass]="{
+    btn: true,
+    'btn-right': true
+  }"
+  (click)="toogleForm()"
+  (click)="open(content)"
+>
+  <i class="fa fa-plus"></i>
+</button>
+<!--<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>-->
+
+<hr />
+
+<pre>{{ closeResult }}</pre>
