--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,18 +1,37 @@
 <p>educacion works!</p>
-<div class="card mat-card">
-    <div class="card-titles">
-      <div class="btn-edit" (click)="clickme()">
-        <a href="#" class="btn-right"><i class="fas fa-pen"></i></a>
-  
-        <a href="#" class="btn-right"></a>
-      </div>
-      <h2>Educacion</h2>
-    </div>
+<div class="card-titles">
+  <div *ngIf="onSession">
+    <!-- <button (click)="clickme()"
+    >
+    <i class="fa fa-pen"></i>
+    </button>
 
-    <p>e INICIOAorks!</p>
-    <app-add-educacion (onAddEducacion)="addEducacion($event)"></app-add-educacion>    
-    <p>APPPSs!</p>
-         <!--
+
+    <div class="btn-edit" (click)="clickme()">
+      -->
+
+    <div *ngIf="onSessionedu">
+      <button class="btn btn-primary" (click)="clickme()">
+        <i class="fa fa-times"></i>
+      </button>
+    </div>
+    <div *ngIf="!onSessionedu">
+      <button class="btn btn-primary" (click)="clickme()">
+        <i class="fa fa-pen"></i>
+      </button>
+    </div>
+  </div>
+
+  <h2>Educacion</h2>
+</div>
+
+<div *ngIf="onSessionedu">
+  <app-add-educacion
+    (onAddEducacion)="addEducacion($event)"
+  ></app-add-educacion>
+</div>
+<div class="card mat-card2">
+  <!--
     <app-add-tipoeducacion (onAddTipoEducacion)="addTipoEducacion($event)"> </app-add-tipoeducacion>
        <app-tipoeducacion></app-tipoeducacion>
  
@@ -26,19 +45,15 @@
   
     (onEditarEducacion)="editEducacion(educacion)"
   -->
-   
-    
-    
-    <div cdkDropList class="e-list" (cdkDropListDropped)="drop2($event)">
-      <div class="e-box" *ngFor="let educacion of educaciones" cdkDrag>
-        
-             <app-educacion-item
-          [educacion]="educacion"
-           
-          (onEditarEducacion)="editEducacion($event)"
-          (onDeleteEducacion)="deleteEducacion(educacion)"
-        ></app-educacion-item>
-        
-      </div>
+
+  <div cdkDropList class="e-list" (cdkDropListDropped)="drop2($event)">
+    <div class="e-box" *ngFor="let educacion of educaciones" cdkDrag>
+      <app-educacion-item
+        [educacion]="educacion"
+        (onEditarEducacion)="editEducacion($event)"
+        (onDeleteEducacion)="deleteEducacion(educacion)"
+        [onSessionedu]="onSessionedu"
+      ></app-educacion-item>
     </div>
   </div>
+</div>
