--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,6 +5,7 @@
     <img src="assets/images/helly.jpg" />
     
   </div>-->
+ 
   <div id="info" style="padding: 20px">
     <div id="info-img">
       <img
@@ -12,23 +13,35 @@
         style="border-radius: 75%; width: 200px; height: 200 px"
         src="assets/images/perfil.jpg"
       />
-      <div class="btn-edit">
-        <a href="#" class="btn-right"><i class="fa fa-pen"></i></a>
-      </div>
-    </div>
+      
 
+  
+
+
+    </div>
+<p></p>
     <div id="info-data">
+      <h1>{{apellido}} {{nombre}}</h1>
+      <h2>{{email}}</h2>
+      <h2>{{fenac}}</h2>
+      <h2>{{nombreLocalidad}} -</h2>
+      
+      <h2>{{urlimage}}</h2>
+      <h2>{{id}}</h2>
       <div>
         <div class="btn-edit" oneclick="cambiar_paraffo()">
-          <h1>Mauricio Carlos</h1>
+          
+   
         </div>
 
         <div id="info-company">Desarrollador en Rio</div>
         <div id="info-contact">
-          <span>Santa fe (Argentina) - Huancavelica (Peru)</span>
-          <span><a href="#">Informacion de contacto</a></span>
+          <span> (Argentina) - Huancavelica (Peru)</span>
+         
         </div>
+        <span><a href="#">Informacion de contacto</a></span>
       </div>
+      <!--
       <ul id="info-details">
         <li>
           <a href="#">
@@ -44,14 +57,35 @@
           </a>
         </li>
       </ul>
+      -->
     </div>
-    <div id="info-actions">
+    <!--   <div id="info-actions">
       <button type="button" class="btn btn-light">Tengo interes en:</button>
       <button type="button" class="btn btn-light">Añadir una seccion</button>
       <button type="button" class="btn btn-light">Más...</button>
+    </div>-->
+  </div>
+  <div *ngIf="onSession">
+    <!-- <button (click)="clickme()"
+      >
+      <i class="fa fa-pen"></i>
+      </button>
+  
+  
+      <div class="btn-edit" (click)="clickme()">
+        -->
+
+    <div *ngIf="onSessionheader">
+      <button class="btn btn-primary" (click)="clickme()">
+        <i class="fa fa-times"></i>
+      </button>
+    </div>
+    <div *ngIf="!onSessionheader">
+      <button class="btn btn-primary" (click)="clickme()">
+        <i class="fa fa-pen"></i>
+      </button>
     </div>
   </div>
-
   <!-- Content 
 <input type="file" id="file1" onchange="showFile(this)">
 -->
@@ -116,3 +150,165 @@ onload:el navegador se termino de cargar
     foo();
   </script>
 </div>
+
+<button
+      [ngClass]="{
+        btn: true,
+        'btn-right': true
+      }"
+      class="btn btn-primary"
+      
+      (click)="open(content)"
+    >
+      <i class="fa fa-plus"></i>
+    </button>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    ></button>
+  </div>
+  <div class="modal-body">
+    <!--<form [formGroup]="formPersona" (ngSubmit)="onSubmit($event)">-->
+    <form [formGroup]="formPersona" (ngSubmit)="onSubmit($event)">
+      <div class="mb-3">
+        <label class="form-label" for="enombre">Nombre Completo:</label>
+        <input
+          class="form-control"
+          type="text"
+          id="enombre"
+          placeholder="Nombre "
+          formControlName="nombre"
+        />
+      </div>
+      <!--
+      <div class="mb-3">
+        <label class="form-label" for="enombre">Foto de perfil:</label>
+        <input
+          #myNameElemgs
+          type="file"
+          name="fileupload2"
+          class="btn btn-primary"
+          (change)="cargar_imagen($event)"
+        />
+      </div>
+      
+
+      <div class="mb-3">
+        <label for="dateOfBirth">Fecha de nacimiento</label>
+        <div class="input-group">
+          <input
+            id="dateOfBirth"
+            class="form-control"
+            placeholder="yyyy-mm-dd"
+            name="dp"
+            ngbDatepicker
+            #dp="ngbDatepicker"
+          />
+          <button
+            class="btn btn-outline-secondary calendar"
+            (click)="dp.toggle()"
+            type="button"
+          ></button>
+        </div>
+      </div>
+      -->
+      <div class="mb-3">
+        <label class="form-label" for="efechanac">Fecha de Nacimiento:</label>
+        <input
+          class="form-control"
+          type="date"
+          formControlName="fenac"
+          id="efechanac"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="edeveloper">Developer:</label>
+        <input
+          class="form-control"
+          type="text"
+          
+        
+        />
+
+        
+        <div 
+        >
+              
+
+      </div>
+        <div 
+        select
+        *ngFor="let localidad of localidades">
+        <option value="value">{{localidad}}</option>   
+              
+
+      </div>
+        <div 
+        select
+        *ngFor="let provincia of provincias">
+        <option value="value"></option>   
+              
+
+      </div>
+      </div>
+
+    
+      <div class="mb-3">
+        <label class="form-label" for="epais">Pais:</label>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="localidad"
+          id="epais"
+          placeholder=""
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="eprovincia">Provinvia:</label>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="localidad"
+          id="eprovincia"
+          placeholder="Provincia "
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="eemail">Email:</label>
+        <input
+          class="form-control"
+          type="text"
+          formControlName="email"
+          id="eemail"
+          placeholder="nombre@example.com"
+        />
+      </div>
+
+      <button
+        type="submit"
+        class="btn btn-primary"
+       
+        (click)="modal.close()"
+      >
+        Agregar/Modificar Informacion Personal
+      </button>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <!--<button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>-->
+  </div>
+</ng-template>
+
+<!--<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>-->
+
+<hr />
+
+<pre>{{ closeResult }}</pre>
