--- a/src/app/components/skill/skill.component.css
+++ b/src/app/components/skill/skill.component.css
@@ -1,4 +1,6 @@
 #cirgrid {
+
+
     display: grid;
     grid-template-columns: auto auto;
     justify-content: center;
@@ -7,6 +9,7 @@
 }
 
 .circle {
+    background-color: rgb(42, 104, 133);
     border: 5.5vw solid var(--grey);
     border-bottom: 5.5vw solid var(--blue);
     border-radius: 50%;
@@ -19,6 +22,8 @@
 }
 
 .circle p {
+
+
     position: relative;
     text-align: center;
     vertical-align: middle;
@@ -57,6 +62,7 @@
         grid-template-columns: auto auto auto;
     }
     .circle {
+        
         border: 4vw solid var(--grey);
         border-bottom: 4vw solid var(--blue);
         border-radius: 50%;
@@ -72,6 +78,7 @@
         border-top: 4vw solid var(--blue);
     }
     .circle p {
+        
         position: relative;
         text-align: center;
         vertical-align: middle;
@@ -83,14 +90,16 @@
 
 
 .e-list {
+    
+    
     max-width: 100%;
-    border: solid 1px #ccc;
+    
     min-height: 60px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    background: white;
-    border-radius: 4px;
+    background: transparent;
+    border-radius: 16px;
     overflow: hidden;
     align-items: center;
     justify-content:center;
@@ -99,17 +108,17 @@
   }
   
   .e-box {
-
-    background-color: rgb(211, 218, 157);
-    margin: 5px;
-    padding: 10px 20px;
+   
+   
+    margin: 1px;
+    padding: 10px 10px;
     cursor: pointer;
 
     border-radius: 32px;
-    margin: 20px 20px;
+    margin: 10px 10px;
 
-    padding: 20px 10px;
-    border-right: solid 1px #ccc;
+    padding: 10px 10px;
+    
     color: rgba(0, 0, 0, 0.87);
     display: flex;
    
@@ -119,8 +128,10 @@
 
     box-sizing: border-box;
     cursor: move;
-    background: rgb(255, 255, 255);
+   
+    background: transparent;
     font-size: 14px;
+    background-color: rgb(42, 104, 133);
     
     flex-basis: 0;
   }
@@ -142,10 +153,37 @@
   }
   
   .e-box:last-child {
+    
     border: none;
     align-items: center;
   }
   
   .e-list.cdk-drop-list-dragging .e-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
+
+
+  h2{
+    padding-left: 32px;
+    font-size: xx-large;    
+    animation: flow 7s ease-in-out infinite;
+    background: -webkit-linear-gradient(-60deg, #904e95,#941a9c,#e73c7e,#ee7752);
+    background-size: 300%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+  }
+
+  @keyframes flow{
+    0% {
+      background-position: 0 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0 50%;
+    }
   }
