--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @font-face {
+   
     font-family: 'Poppins';
     src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 }
@@ -8,12 +9,58 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
 }
 
 
 body{
-    font-family:   -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif  
+    font-family:   -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ; 
+   
+    background: linear-gradient(0.65turn, #3f87a6, #ebf8e1, #3f7594);
+
 }
+
+.mat-card2{
+    content: '';
+    border-radius: 32px;
+    margin: 20px 20px;
+    padding: 20px;
+ 
+    background: #000;
+    display: grid;
+    place-items:center;
+    position: relative;
+    overflow: hidden;
+    min-height: 300px;
+  
+    
+}
+
+.mat-card2::before{
+    content: '';
+    height: 4000px;
+    width: 500px;
+    position: absolute;
+    background: linear-gradient(#00e5ff, #ebf8e1, #b400fb);
+    animation: animate 5s linear infinite;
+    }
+    @keyframes animate{
+        0% {transform: rotate(0deg);}
+        100% {transform: rotate(360deg);}
+    }
+
+    .mat-card2::after{
+        content: '';
+        position: absolute;
+        inset: 20px;
+      
+       background: #000;
+        border-radius: 32px;
+
+        }
+
+  
+
 
 .container{
     max-width: 500px;
@@ -22,7 +69,8 @@ body{
     min-height: 300px;
     border: 1px solid rgb(110, 156, 190);
     padding: 30px;
-    border-radius: 5px;
+    border-radius: 25px;
+    
 }
 
 .btn {
@@ -87,10 +135,17 @@ body{
     margin: 20px 20px;
     padding: 20px;
     border-color: blueviolet;
+    background: linear-gradient(#e66465, #9198e5);
+    
 }
 
 .mat-card#first-card{
     padding: 0;
+    border-radius: 32px;
+    margin: 20px 20px;
+    padding: 20px;
+    border-color: blueviolet;
+    background: linear-gradient(#e66465, #9198e5);
 
 }
 div#profile-background{
