--- a/src/app/components/add-skill/add-skill.component.html
+++ b/src/app/components/add-skill/add-skill.component.html
@@ -66,6 +66,7 @@
 			class="form-control"
 			type="number"
 			id="evalor"
+			placeholder=""
 			placeholder="Valor de Skill"
 			formControlName="valor"
 		  />
@@ -74,7 +75,7 @@
 	  
 	
 	  <button type="submit" class="btn btn-primary" [disabled]="form.invalid" (click)="modal.close()">
-		Agregar Skill
+		<i class="fa fa-plus"></i>
 	  </button>
 	  </form>
 	</div>
@@ -91,7 +92,7 @@
   (click)="toogleForm()"
   (click)="open(content)"	
   >
-  Agregar Educacion MODAL
+  <i class="fa fa-plus"></i>
   </button>
    <!--<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>-->
   
