--- a/src/app/components/add-tipoeducacion/add-tipoeducacion.component.html
+++ b/src/app/components/add-tipoeducacion/add-tipoeducacion.component.html
@@ -45,7 +45,7 @@
  
 
 	<button type="submit" class="btn btn-primary" [disabled]="form.invalid">
-		Agregar Tipo Educacion
+		<i class="fa fa-plus"></i>
 	</button>
     
   </form>
