--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,19 +1,34 @@
 <p>experiencia works!</p>
-<div class="card mat-card">
-  <div id="experience">
-    <div class="card-titles">
-      <h2>Experiencia</h2>
-      <div class="btn-edit">
-        <a href="#" class="btn-right"><i class="fa fa-plus"></i></a>
-      </div>
+<div class="card-titles">
+  <div *ngIf="onSession">
+    <div *ngIf="onSessionexp">
+      <button
+        [ngClass]="{
+          btn: true,
+          'btn-right': true
+        }"
+        class="btn btn-primary"
+        (click)="clickme()"
+      >
+        <i class="fa fa-times"></i>
+      </button>
+    </div>
+    <div *ngIf="!onSessionexp">
+      <button class="btn btn-primary" (click)="clickme()">
+        <i class="fa fa-pen"></i>
+      </button>
     </div>
   </div>
-
-
- 
-
-     <app-add-experience (onAddExperience)="addExperience($event)"></app-add-experience>
-<!--
+  <h2>Experiencia</h2>
+  <div *ngIf="onSessionexp">
+    <app-add-experience
+      (onAddExperience)="addExperience($event)"
+    ></app-add-experience>
+  </div>
+</div>
+<div class="card mat-card2">
+  <div id="experience"></div>
+  <!--
   Es lo mismo que anuncia de drag and drop 
   <app-project-item
     *ngFor="let project of projects"
@@ -27,9 +42,10 @@
     <div class="e-box" *ngFor="let experience of experiences" cdkDrag>
       <app-experience-item
         [experiencia]="experience"
+        (onEditExperience)="editExperience($event)"
         (onDeleteExperience)="deleteExperience(experience)"
+        [onSessionexp]="onSessionexp"
       ></app-experience-item>
     </div>
   </div>
-
- </div>
+</div>
