--- a/src/app/components/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/components/iniciar-sesion/iniciar-sesion.component.html
@@ -1,81 +1,169 @@
 <h1>Iniciar Session</h1>
 
-<form [formGroup]="form" class="m-5"  (ngSubmit)="onEnviar($event)">
- <!-- 
+<!-- 
   <div>
     <label for="email">Email: </label>
     <input type="email" placeholder="Email" formControlName="email">
-</div>
-//Configuramos en el controlador
-<div *ngIf="Email?.errors  && Email?.touched">
+  </div>
+  //Configuramos en el controlador
+  <div *ngIf="Email?.errors  && Email?.touched">
     <p *ngIf="Email?.hasError('required')" class="error">
         El email es requerido.
     </p>
     <p *ngIf="Email?.hasError('email')" class="error">
         El formato del email debe ser válido.
     </p>
-</div>
-<div>
+    </div>
+    <div>
     <label for="password" class="form-label">Password: </label>
     <input type="password" placeholder="Password" formControlName="password">
-</div>
-// Configuramos en el controlador 
-<div *ngIf="Password?.errors  && Password?.touched">
+    </div>
+    // Configuramos en el controlador 
+    <div *ngIf="Password?.errors  && Password?.touched">
     <p *ngIf="Password?.hasError('required')" class="error">
         El password es requerido.
     </p>
     <p *ngIf="Password?.errors?.['minlength']" class="error">
         El password debe ser de 8 o más caracteres.
     </p>
-</div>
-<div>
+    </div>
+    <div>
     <button [disabled]="Password?.errors || Email?.errors" type="submit" id="submit" class="btn btn-primary">Iniciar Sesión
-    </button>
-</div>
--->
-  <div class="mb-3">
-    <label for="exampleInputEmail1">Email address</label>
+    </button> 
+      </div>
+      -->
+
+<form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+  <div class="form-outline form-white mb-4">
     <input
-      type="email"
-      formControlName="email"
-      class="form-control"
-      [ngClass]="{ 'is-invalid': Email?.errors && Email?.touched,  'is-valid': !Email?.errors && Email?.touched      }"
-      id="exampleInputEmail1"      aria-describedby="emailHelp"      placeholder="Enter email"
+      type="user"
+      id="nombreUsuario"
+      name="nombreUsuario"
+      class="form-control form-control-lg"
+      [(ngModel)]="nombreUsuario"
+      name="nombreUsuario"
+      required
     />
-    <div *ngIf="Email?.errors && Email?.touched">
-      <p *ngIf="Email?.hasError('required')" class="text-danger">    Es necesario que ingrese Email    </p>
-      <p *ngIf="Email?.hasError('email')" class="text-danger">     Ingrese un formato valido      </p>
-    </div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1">Password</label>
-    <input
-      type="password"  formControlName="password"   class="form-control"  id="exampleInputPassword1"
-      placeholder="Password"
-      [ngClass]="{ 'is-invalid': Password?.errors && Password?.touched,  'is-valid': !Password?.errors && Password?.touched      }"
-    />
-    <div *ngIf="Password?.errors && Password?.touched">
-      <p *ngIf="Password?.hasError('required')" class="text-danger">   La constraseña es necesaria y debe ser mayor a 8 caracteres      </p>
-    
-     
-      
-    
-    </div>
+
+    <label class="form-label" for="nombreUsuario">Usuario</label>
   </div>
 
-  <div class="mb-1">
+  <div class="form-outline form-white mb-4">
     <input
-      type="checkbox"
-     
-      class="form-check-input"
-      id="exampleCheck1"
+      type="password"
+      id="password"
+      class="form-control form-control-lg"
+      [(ngModel)]="password"
+      name="password"
+      required
     />
-    <label class="form-check-label" for="exampleCheck1">Registrarme</label>
-  </div> 
-  <!--<button type="submit" class="btn btn-primary" (click)="login($event)">Login</button>-->
-  <button  type="submit" id="submit" class="btn btn-primary">Iniciar Sesión
+
+    <label class="form-label" for="password">Contraseña</label>
+  </div>
+  <button class="btn btn-outline-light btn-lg px-5" type="submit">
+    INICIAR SESION
   </button>
 </form>
+
+<br>
+
+<br>
+
+
+
+<form #f="ngForm" (ngSubmit)="onNewUser()" novalidate></form>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">NUEVO USUARIO</h4>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    ></button>
+  </div>
+  <div class="modal-body">
+    <form (ngSubmit)="onNewUser()" novalidate>
+      <div class="mb-3">
+        <label class="form-label" >Nombre y apellido</label>
+        <input
+          type="user"
+          id="nuevoNombre"
+          name="nuevoNombre"
+          class="form-control form-control-lg"
+          [(ngModel)]="nuevoNombre"
+          name="nuevoNombre"
+          required
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" >Nombre de Usuario: </label>
+        <input
+          type="user"
+          id="nuevoNombreUsuario"
+          name="nuevoNombreUsuario"
+          class="form-control form-control-lg"
+          [(ngModel)]="nuevoNombreUsuario"
+          name="nuevoNombreUsuario"
+          required
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" >Contraseña </label>
+
+        <input
+          type="password"
+          id="nuevoPassword"
+          class="form-control form-control-lg"
+          [(ngModel)]="nuevoPassword"
+          name="nuevoPassword"
+          required
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" >Email </label>
+        <input
+          type="email"
+          id="nuevoEmail"
+          name="nuevoEmail"
+          class="form-control form-control-lg"
+          [(ngModel)]="nuevoEmail"
+          name="nuevoEmail"
+          required
+        />
+      </div>
+
+      
+
+      <button type="submit" class="btn btn-primary" (click)="modal.close()">
+        Crear Usuario
+      </button>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <!--
+      [disabled]="form.invalid"
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>-->
+  </div>
+</ng-template>
+<button
+  [ngClass]="{
+    btn: true,
+    'btn-right': true
+  }"
+  (click)="open(content)"
+>
+  RESGISTRATE AQUI
+</button>
+<!--<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>-->
+
+<hr />
+
+<pre>{{ closeResult }}</pre>
 
 <!-- </div>
 <div id="invitado" *ngIf="!isAdmin()">
@@ -83,4 +171,4 @@
     </button>
 </div>
 <button type="submit" class="btn btn-primary" (click)="login($event)">Login</button>-->
- <!-- <button type="submit" class="btn btn-primary" (click)="login2()">Login</button>-->
+<!-- <button type="submit" class="btn btn-primary" (click)="login2()">Login</button>-->
