--- a/src/app/components/portfololio/portfololio.component.html
+++ b/src/app/components/portfololio/portfololio.component.html
@@ -1,13 +1,15 @@
 <p>portfololio works!</p>
 <app-head></app-head>
-
+<!--
 <app-header></app-header>
-<app-educacion></app-educacion>
-
-
-
-<app-acercade></app-acercade>
-<app-experiencia></app-experiencia>
-<app-projects></app-projects>
-
-<app-skill></app-skill>
+<div id="header" ></div>
+-->
+<app-acercade [onSession]="onSession" ></app-acercade>
+<div id="educacion" ></div>
+<app-educacion [onSession]="onSession"></app-educacion>
+<div id="experiencia" ></div>
+<app-experiencia [onSession]="onSession"></app-experiencia>
+<div id="projects" ></div>
+<app-projects [onSession]="onSession"></app-projects>
+<div id="skill" ></div>
+<app-skill [onSession]="onSession"></app-skill>
